<resources>
    <string name="app_name">Metronome</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>

    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="min">min: </string>
    <string name="sec">sec: </string>
    <string name="_sec"></string>
    <string name="_min"></string>
    <string name="sound_one">Sound one</string>
    <string name="sound_two">Sound two</string>
    <string name="sound_three">Sound three</string>
    <string name="sound_four">Sound four</string>
    <string name="sound_five">Sound five</string>

    <string-array name="entries_sound">
        <item>Sound one</item>
        <item>Sound two</item>
        <item>Sound three</item>
    </string-array>
    <string-array name="entry_values_sound">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="about_head">About this app.</string>
    <string name="text_about">Metronome for yoga and sports. Many exercises and yoga asanas need to be performed for a certain amount of time. 20 seconds or 50 — choose a sound and count blows.</string>
    <string name="version">Version 0.1</string>
    <string name="select_sound">Select sound</string>

</resources>
