<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLiner"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_sound"
        app:layout_constraintBottom_toTopOf="@+id/soundCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <RadioGroup
        android:id="@+id/soundCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioSound1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound_one" />

        <RadioButton
            android:id="@+id/radioSound2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound_two" />

        <RadioButton
            android:id="@+id/radioSound3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound_three" />
        <RadioButton
            android:id="@+id/radioSound4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound_four" />
        <RadioButton
            android:id="@+id/radioSound5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound_five" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>